Timetables for all stations on one page + sorting

--- a/src/main/webapp/timetable.xhtml
+++ b/src/main/webapp/timetable.xhtml
@@ -12,24 +12,33 @@
 </h:head>
 
 <h:body>
-    <h1 style="text-align: center">Live timetable for #{timetable.schedules.get(0).stationName}</h1>
-    <p:dataTable var="schedule" value="#{timetable.schedules}">
-        <p:column headerText="Train">
-            <h:outputText value="#{schedule.trainName}"/>
-        </p:column>
-        <p:column headerText="Arrival">
-            <h:outputText value="#{schedule.arrivalTime}"/>
-        </p:column>
-        <p:column headerText="Departure">
-            <h:outputText value="#{schedule.departureTime}"/>
-        </p:column>
-        <p:column headerText="Direction">
-            <h:outputText value="#{schedule.endStation}"/>
-        </p:column>
-        <p:column headerText="Status">
-            <h:outputText value="#{schedule.trainStatus}" style="color: #{schedule.getColorForTimetable()}"/>
-        </p:column>
-    </p:dataTable>
+    <h1 style="text-align: center">Live Timetable</h1>
+    <h:form>
+        <p:tabView value="#{timetable.schedules}" var="schedule" scrollable="true"
+                   activeIndex="#{timetable.activeIndex}">
+            <p:ajax event="tabChange" listener="#{timetable.onTabChange}"/>
+            <p:tab title="#{schedule.key}">
+                <p:dataTable var="scheduleItem" value="#{schedule.value}">
+                    <p:column headerText="Train" sortBy="#{scheduleItem.trainName}">
+                        <h:outputText value="#{scheduleItem.trainName}"/>
+                    </p:column>
+                    <p:column headerText="Arrival" sortBy="#{scheduleItem.arrivalTime}">
+                        <h:outputText value="#{scheduleItem.arrivalTime}"/>
+                    </p:column>
+                    <p:column headerText="Departure" sortBy="#{scheduleItem.departureTime}">
+                        <h:outputText value="#{scheduleItem.departureTime}"/>
+                    </p:column>
+                    <p:column headerText="Direction" sortBy="#{scheduleItem.endStation}">
+                        <h:outputText value="#{scheduleItem.endStation}"/>
+                    </p:column>
+                    <p:column headerText="Status" sortBy="#{scheduleItem.trainStatus}">
+                        <h:outputText value="#{scheduleItem.trainStatus}"
+                                      style="color: #{scheduleItem.getColorForTimetable()}"/>
+                    </p:column>
+                </p:dataTable>
+            </p:tab>
+        </p:tabView>
+    </h:form>
 </h:body>
 
 <o:socket channel="timetableChannel" scope="application" onmessage="socketListener"/>
